--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=pipocaIA
+
+##Configurar H2
+spring.h2.console.path=/h2-console
+spring.datasource.generate-unique-name=false
+spring.h2.console.enabled=true
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+#Configuração do JPA // Hibernates
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+
+#Configurar o flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
+##Comunicação com as APIs
