--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,10 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
 ##Comunicação com as APIs
+openIA.api.url=https://api.openai.com/v1/chat/completions
+openIA.api.key=${OPENIA_KEY}
+tmdb.api.url= https://api.themoviedb.org/3/search/movie
+tmdb.api.key=${TMDB_KEY}
+
+##Filtro para o formulário HTML
+spring.mvc.hiddenmethod.filter.enabled=true
