--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
-#Configuração do JPA // Hibernates
+#Configura\uFFFD\uFFFDo do JPA // Hibernates
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
@@ -18,11 +18,11 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
-##Comunicação com as APIs
+##Comunica\uFFFD\uFFFDo com as APIs
 openIA.api.url=https://api.openai.com/v1/chat/completions
 openIA.api.key=${OPENIA_KEY}
 tmdb.api.url= https://api.themoviedb.org/3/search/movie
 tmdb.api.key=${TMDB_KEY}
 
-##Filtro para o formulário HTML
+##Filtro para o formul\uFFFDrio HTML
 spring.mvc.hiddenmethod.filter.enabled=true
