--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,5 @@ openIA.api.key=${OPENIA_KEY}
 tmdb.api.url= https://api.themoviedb.org/3/search/movie
 tmdb.api.key=${TMDB_KEY}
 
-##Filtro para o formul\uFFFDrio HTML
+##Filtro para o formulario HTML
 spring.mvc.hiddenmethod.filter.enabled=true
