refactor(config): switch H2 to PostgreSQL configuration
Replaced H2 database configuration with PostgreSQL in `.env.example` and `application.properties`.

This change aligns with recent updates to use PostgreSQL as the runtime database, enhancing consistency with the build configuration.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-# H2 Database Configuration (for local Docker setup)
+# Postgresql Database Configuration (for local Docker setup)
 
-DATABASE_URL=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
+POSTGRES_URL=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
 
 # API Keys (fill these with your own secrets in your local .env file)
 OPENIA_KEY=
