--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
 spring.application.name=pipocaIA
-
-##Configurar H2
-spring.h2.console.path=/h2-console
-spring.datasource.generate-unique-name=false
-spring.h2.console.enabled=true
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+##Configurar Postgres
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Configura\uFFFD\uFFFDo do JPA // Hibernates
 spring.jpa.hibernate.ddl-auto=validate
