build(docker): configure image tag and simplify jar path
Updated `docker-compose.yml` to include a specific image tag (`pipocaia-app:0.0.1-RELEASE`) for the application container. Simplified the JAR path in Dockerfile to enhance clarity and streamline the build process.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   pipoca-ia-app:
     build: .
     container_name: pipoca-ia-app
+    image: pipocaia-app:0.0.1-RELEASE
     ports:
       - "8080:8080"
     env_file:
